fix: fix dropdown overlapping

--- a/src/components/DropdownMenu/style.css
+++ b/src/components/DropdownMenu/style.css
@@ -4,6 +4,8 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: 18px;
+    font-family: "Montserrat";
+    font-weight: 500;
     position: relative;
     z-index: 1;
 }
@@ -13,6 +15,7 @@
     padding: 10px 15px;
     display: flex;
     align-items: center;
+    z-index: 1;
 }
 
 .dropdown-button::after {
@@ -42,6 +45,7 @@
     border-radius: 0 0 10px 10px;
     list-style: none;
     z-index: 2;
+    box-shadow: 0px 10px 5px rgba(176, 176, 176, 0.8);
 }
 
 .dropdown-item:not(:first-child) {
