--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -13,6 +13,8 @@ header h1 {
     color: #ffffff;
     margin: 0;
     font-size: 48px;
+    font-family: "Montserrat";
+    font-weight: 900;
 }
 
 .search-field {
@@ -20,6 +22,8 @@ header h1 {
     height: 40px;
     padding: 0 10px;
     font-size: 16px;
+    font-family: "Montserrat";
+    font-weight: 500;
     border: none;
 }
 
@@ -48,7 +52,7 @@ header h1 {
 
 .search-bar {
     display: flex;
-    width: 600px;
+    width: clamp(350px, 70%, 600px);
     background-color: #ffffff;
     overflow: hidden;
     border-radius: 10px;
